@@ -1074,7 +1074,7 @@ Is $T$ injective?
 <![CDATA[x - y + 2z &= 0\\]]>
 <![CDATA[x + 2y - z &= 0]]>
 </alignmath>.
-Thus, we are looking for the nullspace of the matrix
+Thus, we are looking for the null space of the matrix
 $A_T =
 \begin{bmatrix}
 <![CDATA[2& 1 & 1\\]]>
@@ -1123,7 +1123,7 @@ Is $T$ injective?
 <![CDATA[0 & 0 & 0 & \leading{1}]]>
 \end{bmatrix}
 </alignmath>
-The nullspace of $A$ is $\set{\zerovector}$, so the kernel of $T$ is also trivial:  $\krn{T} = \set{\zerovector}$.
+The null space of $A$ is $\set{\zerovector}$, so the kernel of $T$ is also trivial:  $\krn{T} = \set{\zerovector}$.
 </solution>
 </exercise>
 
@@ -1158,7 +1158,7 @@ Is $T$ injective?
 <![CDATA[0 & 0 & 0 & 0]]>
 \end{bmatrix}
 </alignmath>
-Thus, a basis for the nullspace of $A$ is $\set{\colvector{-1\\-1\\3\\0}}$, and the kernel is $\krn{T} = \spn{\set{\colvector{-1\\-1\\3\\0}}}$.  Since the kernel is nontrivial, this linear transformation is not injective.
+Thus, a basis for the null space of $A$ is $\set{\colvector{-1\\-1\\3\\0}}$, and the kernel is $\krn{T} = \spn{\set{\colvector{-1\\-1\\3\\0}}}$.  Since the kernel is nontrivial, this linear transformation is not injective.
 </solution>
 </exercise>
 
