@@ -12,6 +12,7 @@ Typo: Solution EE.C19, correct two subscripts at the end (Matt Fergoda)
 Typo: Theorem EIM, last line of proof need a zero vector (Matt Fergoda)
 Typo: Exercise MR.T60, use correct linear transformation (Rachel Hirsch)
 Typo: Section VR, "than" corrected to "then" (Rachel Chaiser)
+Typo: Exercises ILT.C27, ILT.C28, and ILT.C29, "nullspace" is two words (Rachel Hirsch)
 
 v3.50 2015/12/30
 ~~~~~~~~~~~~~~~~
